add gatsby-cloud module and update node modules to latest versions

--- a/package.json
+++ b/package.json
@@ -14,48 +14,50 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
-    "gatsby": "^2.32.13",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-feed": "^2.13.1",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-netlify": "^2.11.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-purgecss": "^3.1.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-remark-copy-linked-files": "^2.10.0",
+    "gatsby": "^3.12.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-feed": "^3.12.0",
+    "gatsby-plugin-gatsby-cloud": "^3.0.0",
+    "gatsby-plugin-google-analytics": "^3.12.0",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-netlify": "^3.12.0",
+    "gatsby-plugin-offline": "^4.12.0",
+    "gatsby-plugin-postcss": "^4.12.0",
+    "gatsby-plugin-purgecss": "^6.0.2",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sass": "^4.12.0",
+    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-remark-copy-linked-files": "^4.9.0",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.13.0",
-    "gatsby-remark-responsive-iframe": "^2.11.0",
-    "gatsby-remark-smartypants": "^2.10.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-remark-images": "^5.9.0",
+    "gatsby-remark-prismjs": "^5.9.0",
+    "gatsby-remark-responsive-iframe": "^4.9.0",
+    "gatsby-remark-smartypants": "^4.9.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
+    "gatsby-transformer-sharp": "^3.12.0",
     "jquery": "^3.6.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.6",
     "prismjs": "^1.24.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "typed.js": "^2.0.12",
-    "typeface-alegreya": "^0.0.69",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
-    "typeface-nunito": "^0.0.72",
+    "typeface-alegreya": "^1.1.13",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
+    "typeface-nunito": "^1.1.13",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "husky": "^2.2.0",
+    "autoprefixer": "^10.3.1",
+    "husky": "^7.0.1",
     "postcss-color-function": "^4.1.0",
-    "postcss-custom-properties": "^8.0.10",
+    "postcss-custom-properties": "^11.0.0",
     "postcss-easy-import": "^3.0.0",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^1.10.0"
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
