--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-feed": "^5.8.0",
     "gatsby-plugin-gatsby-cloud": "^5.8.0",
     "gatsby-plugin-google-analytics": "^5.8.0",
+    "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-offline": "^6.8.0",
