pipeline to deploy to gh-pages

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-transformer-remark": "^6.8.0",
     "gatsby-transformer-sharp": "^5.8.0",
+    "gh-pages": "^6.0.0",
     "jquery": "^3.6.4",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.21",
@@ -80,7 +81,9 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy:ci": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/SFRL/personal-webpage.git"
   },
   "husky": {
     "hooks": {
